src/test/deca/context/invalid/provided/somme_type_incompatible.deca
/*/ Description:
//    Programme effectuant la somme de façon incorrecte.
//
// Resultats:
//    3
//
// Historique:
//    cree le 01/01/2022*/

{
        string a = "toto";
        int b = 5;
        int c = a + b;
}
